--- a/src/app/message.component.css
+++ b/src/app/message.component.css
@@ -2,15 +2,34 @@
 
 .message
 {
-  width: 100%;
+  width: calc(95% - 30px);
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  border-radius: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  background-color: #ffffff;
+  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.45);
 }
+
+
+.message.human
+{
+  margin-left: 40px;
+}
+
+
+.message.bot
+{
+
+}
+
 
 .message:hover
 {
@@ -28,11 +47,13 @@
 .profilePicture img
 {
   width: 50px;
+  border-radius: 4px;
 }
 
 
 .messageTextArea
 {
+  margin-left: 10px;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
