--- a/src/app/message.component.css
+++ b/src/app/message.component.css
@@ -1,6 +1,103 @@
 
 
-.message
+.facebook.message
+{
+  width: calc(95% - 20px);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: flex-end;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 0;
+  border-radius: 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 10px;
+  cursor: pointer;
+}
+
+
+.facebook.message.human
+{
+  margin-left: 25px;
+}
+
+
+.facebook.message.bot
+{
+
+}
+
+
+.facebook.message:hover
+{
+
+}
+
+
+.facebook .profilePicture
+{
+  flex-grow: 0;
+  width: 35px;
+  margin-bottom: 20px;
+}
+
+
+.facebook .profilePicture img
+{
+  width: 30px;
+  border-radius: 4px;
+}
+
+
+.facebook.human .profilePicture img
+{
+  display: none
+}
+
+
+.facebook.bot .messageTextArea
+{
+  background-color: #f1f0f0;
+  border-radius: 8px;
+  color: #3c3c3c;
+}
+
+.facebook.human .messageTextArea
+{
+  background-color: #4080ff;
+  border-radius: 8px;
+  color: white;
+}
+
+
+.facebook .messageTextArea
+{
+  margin-left: 12px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 8px;
+}
+
+.facebook .messageTextArea .messageHeader
+{
+  flex-grow: 0;
+  font-weight: bold;
+}
+
+.facebook .messageTextArea .messageBody
+{
+  flex-grow: 1;
+}
+
+
+
+
+
+.dealership.message
 {
   width: calc(95% - 30px);
   display: flex;
@@ -19,39 +116,39 @@
 }
 
 
-.message.human
+.dealership.message.human
 {
   margin-left: 40px;
 }
 
 
-.message.bot
+.dealership.message.bot
 {
 
 }
 
 
-.message:hover
+.dealership.message:hover
 {
   background-color: #f2f2f2;
 }
 
 
-.profilePicture
+.dealership .profilePicture
 {
   flex-grow: 0;
   width: 60px;
 }
 
 
-.profilePicture img
+.dealership .profilePicture img
 {
   width: 50px;
   border-radius: 4px;
 }
 
 
-.messageTextArea
+.dealership .messageTextArea
 {
   margin-left: 10px;
   flex-grow: 1;
@@ -60,13 +157,13 @@
   align-items: flex-start;
 }
 
-.messageTextArea .messageHeader
+.dealership .messageTextArea .messageHeader
 {
   flex-grow: 0;
   font-weight: bold;
 }
 
-.messageTextArea .messageBody
+.dealership .messageTextArea .messageBody
 {
   flex-grow: 1;
 }
