--- a/src/app/message.component.html
+++ b/src/app/message.component.html
@@ -1,12 +1,14 @@
-<div class="message" [@flyInOut]="" [ngClass]="person">
+<div class="message" [@flyInOut]="" [ngClass]="person + ' ' + mode">
   <div class="profilePicture">
     <div *ngIf="person == 'bot'"><img src="assets/bot-profile-pic.png"></div>
     <div *ngIf="person == 'human'"><img src="assets/human-profile-pic.png"></div>
   </div>
   <div class="messageTextArea">
     <div class="messageHeader">
-      <div *ngIf="person == 'bot'"><span>Toyota</span></div>
-      <div *ngIf="person == 'human'"><span>You</span></div>
+      <div *ngIf="mode == 'dealership'">
+        <div *ngIf="person == 'bot'"><span>Toyota</span></div>
+        <div *ngIf="person == 'human'"><span>You</span></div>
+      </div>
     </div>
     <div class="messageBody">
       <span>{{text}}</span>
