--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -127,12 +127,12 @@
 .facebook .inputArea input
 {
   left: 0;
-  color: black;
   flex-grow: 1;
-  font-size: 15px;
-  margin-left: 5px;
-  margin-top: 3px;
+  margin-left: 8px;
+  margin-top: 6px;
   border:0;
+  color: #3e3e3e;
+  font-size: 12px;
 }
 
 .facebook .inputArea input::placeholder
